--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,45 +9,36 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
-
         .container {
             max-width: 600px;
             margin: 0 auto;
         }
-
         .header {
             text-align: center;
             margin-bottom: 20px;
         }
-
         .section {
             margin-bottom: 20px;
         }
-
         .section label {
             display: block;
             margin-bottom: 8px;
             font-weight: bold;
         }
-
-        .section input,
-        .section button {
+        .section input, .section button {
             width: 100%;
             padding: 8px;
             box-sizing: border-box;
         }
-
         .section button {
             background-color: #007bff;
             color: white;
             border: none;
             cursor: pointer;
         }
-
         .section button:hover {
             background-color: #0056b3;
         }
-
         .output {
             border: 1px solid #ddd;
             padding: 10px;
@@ -56,7 +46,6 @@
         }
     </style>
 </head>
-
 <body>
     <div class="container">
         <div class="header">
@@ -65,7 +54,7 @@
         <div class="section">
             <label for="question">What question would you like to ask BioModelsRAG today?</label>
             <input type="text" id="question" placeholder="Type your question here...">
-            <button onclick="submitQuestion()">Submit</button>
+            <button onclick="showResponse()">Submit</button>
         </div>
         <div class="section">
             <label for="response">Response:</label>
@@ -74,31 +63,11 @@
     </div>
 
     <script>
-        async function submitQuestion() {
+        function showResponse() {
             var question = document.getElementById('question').value;
             var responseDiv = document.getElementById('response');
-            responseDiv.textContent = 'Processing...';
-
-            try {
-                const response = await fetch('YOUR_BACKEND_API_URL', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ question: question })
-                });
-
-                const data = await response.json();
-                if (response.ok) {
-                    responseDiv.textContent = 'Response: ' + data.answer;
-                } else {
-                    responseDiv.textContent = 'Error: ' + data.message;
-                }
-            } catch (error) {
-                responseDiv.textContent = 'An error occurred: ' + error.message;
-            }
+            responseDiv.textContent = 'You asked: ' + question;
         }
     </script>
 </body>
-
 </html>
